audio functionality and responsiveness

--- a/app/views/contact.pug
+++ b/app/views/contact.pug
@@ -332,7 +332,7 @@ block content
                 i.fa-solid.fa-shield-cat.fa-flip
                 h2 SoundScape
             .nav-links
-                a(href='home') Home
+                a(href='/') Home
                 a(href='shows') Shows
                 a(href='hosts') Hosts
                 a(href='about') About
@@ -371,7 +371,7 @@ block content
             section
                 h2.footer-section-subheading Quick Links
                 .footer-links
-                    a(href='home') Home
+                    a(href='/') Home
                     a(href='shows') Shows
                     a(href='hosts') Hosts
                     a(href='about') About Us
